--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "3rdParty/DX9_SDK_Aug09"]
 	path = 3rdParty/DX9_SDK_Aug09
 	url = https://github.com/AliveTeam/DX9_SDK_Aug09.git
+[submodule "3rdParty/shelf-pack-cpp"]
+	path = 3rdParty/shelf-pack-cpp
+	url = https://github.com/mapbox/shelf-pack-cpp
