--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,12 @@ endif()
 # From: https://medium.com/@alasher/colored-c-compiler-output-with-ninja-clang-gcc-10bfe7f2b949
 option (FORCE_COLORED_OUTPUT "Always produce ANSI-colored output (GNU/Clang only)." FALSE)
 
-#add_compile_options (-ftime-trace)
+if (UNIX)
+    #add_compile_options(-ftime-trace)
+
+    #add_compile_options(-fsanitize=undefined,address)
+    #add_link_options(-fsanitize=undefined,address)
+endif()
 
 if (${FORCE_COLORED_OUTPUT})
     if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
