--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,8 +30,14 @@ endif()
 if (${FORCE_COLORED_OUTPUT})
     if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
        add_compile_options (-fdiagnostics-color=always)
+       add_compile_options (-Wall)
+       add_compile_options (-Wextra)
+       add_compile_options (-Wpendantic)
     elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
        add_compile_options (-fcolor-diagnostics)
+       add_compile_options (-Wall)
+       add_compile_options (-Wextra)
+       add_compile_options (-Wpendantic)
     endif ()
 endif ()
 
