--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "3rdParty/shelf-pack-cpp"]
 	path = 3rdParty/shelf-pack-cpp
 	url = https://github.com/mapbox/shelf-pack-cpp
+[submodule "3rdParty/SVT-AV1"]
+	path = 3rdParty/SVT-AV1
+	url = https://github.com/AliveTeam/SVT-AV1.git
