--- a/3rdParty/CMakeLists.txt
+++ b/3rdParty/CMakeLists.txt
@@ -1,5 +1,34 @@
 project(Deps VERSION 0.1 LANGUAGES C CXX)
 
+set(ENABLE_DOCS OFF)
+set(ENABLE_EXAMPLES OFF)
+set(ENABLE_TESTS OFF)
+set(ENABLE_TOOLS OFF)
+set(CONFIG_ANALYZER OFF)
+set(CONFIG_INSPECTION OFF)
+set(BUILD_SHARED_LIBS OFF)
+add_definitions(-DNOMINMAX)
+set(AOM_TARGET_CPU generic)
+add_subdirectory(aom)
+set_property(TARGET aom PROPERTY FOLDER "3rdParty")
+set_property(TARGET aom_av1_common PROPERTY FOLDER "3rdParty")
+set_property(TARGET aom_av1_decoder PROPERTY FOLDER "3rdParty")
+set_property(TARGET aom_av1_encoder PROPERTY FOLDER "3rdParty")
+set_property(TARGET aom_dsp PROPERTY FOLDER "3rdParty")
+set_property(TARGET aom_dsp_common PROPERTY FOLDER "3rdParty")
+set_property(TARGET aom_dsp_decoder PROPERTY FOLDER "3rdParty")
+set_property(TARGET aom_dsp_encoder PROPERTY FOLDER "3rdParty")
+set_property(TARGET aom_mem PROPERTY FOLDER "3rdParty")
+set_property(TARGET aom_pc PROPERTY FOLDER "3rdParty")
+set_property(TARGET aom_rtcd PROPERTY FOLDER "3rdParty")
+set_property(TARGET aom_scale PROPERTY FOLDER "3rdParty")
+set_property(TARGET aom_util PROPERTY FOLDER "3rdParty")
+set_property(TARGET aom_version PROPERTY FOLDER "3rdParty")
+set_property(TARGET aom_version_check PROPERTY FOLDER "3rdParty")
+set_property(TARGET av1_rc_qmode PROPERTY FOLDER "3rdParty")
+set_property(TARGET dist PROPERTY FOLDER "3rdParty")
+set_property(TARGET yuv PROPERTY FOLDER "3rdParty")
+
 
 # Cinder for lock free circular buffer in audio processing
 add_library(Cinder INTERFACE)
