--- a/Source/relive_lib/CMakeLists.txt
+++ b/Source/relive_lib/CMakeLists.txt
@@ -104,6 +104,7 @@ target_include_directories(relive_lib PUBLIC
     $<BUILD_INTERFACE:
     ${CMAKE_CURRENT_SOURCE_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}/../../3rdParty
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../3rdParty/aom
     ${CMAKE_CURRENT_SOURCE_DIR}/../../3rdParty/json/single_include>
     $<INSTALL_INTERFACE:include>
     PRIVATE src ${CMAKE_BINARY_DIR})
@@ -130,6 +131,7 @@ target_link_libraries(relive_lib
     project_warnings
     spng
     miniz
+    aom
     )
 
 export(TARGETS relive_lib FILE relive_lib.cmake)
