fix setting option via set in older cmake ver

--- a/3rdParty/CMakeLists.txt
+++ b/3rdParty/CMakeLists.txt
@@ -1,5 +1,6 @@
 project(Deps VERSION 0.1 LANGUAGES C CXX)
 
+set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
 set(ENABLE_DOCS OFF)
 set(ENABLE_EXAMPLES OFF)
 set(ENABLE_TESTS OFF)
