--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,7 @@ jobs:
   - script: |
         sudo apt-get update
         sudo apt-get install libsdl2-dev
-        git submodule update --init
+        git submodule update --init --depth=1
         cmake --version
         mkdir build
         cd build
@@ -26,7 +26,7 @@ jobs:
   steps:
   - script: |
         brew install sdl2
-        git submodule update --init
+        git submodule update --init --depth=1
         cmake --version
         mkdir build
         cd build
@@ -45,7 +45,7 @@ jobs:
         set AO_PATH=C:\\GOG Games\\Abes Oddysee
         mkdir "C:\\GOG Games\\Abes Exoddus"
         mkdir "C:\\GOG Games\\Abes Oddysee"
-        git submodule update --init
+        git submodule update --init --depth=1
         mkdir C:\temp
         powershell Invoke-WebRequest 'https://github.com/AliveTeam/SDL2_win32_dev_mirror/files/8710940/SDL2-devel-2.0.22-VC.zip' -OutFile C:\temp\SDL2-devel-2.0.22-VC.zip
         7z x C:\Temp\SDL2-devel-2.0.22-VC.zip -oC:\Temp
@@ -66,7 +66,7 @@ jobs:
         set AO_PATH=C:\\GOG Games\\Abes Oddysee
         mkdir "C:\\GOG Games\\Abes Exoddus"
         mkdir "C:\\GOG Games\\Abes Oddysee"
-        git submodule update --init
+        git submodule update --init --depth=1
         mkdir C:\temp
         powershell Invoke-WebRequest 'https://github.com/AliveTeam/SDL2_win32_dev_mirror/files/8710940/SDL2-devel-2.0.22-VC.zip' -OutFile C:\temp\SDL2-devel-2.0.22-VC.zip
         7z x C:\Temp\SDL2-devel-2.0.22-VC.zip -oC:\Temp
