--- a/3rdParty/CMakeLists.txt
+++ b/3rdParty/CMakeLists.txt
@@ -1,5 +1,9 @@
 project(Deps VERSION 0.1 LANGUAGES C CXX)
 
+add_subdirectory(Vulkan-Headers)
+add_subdirectory(volk)
+set_property(TARGET volk PROPERTY FOLDER "3rdParty")
+
 set(CMAKE_POLICY_DEFAULT_CMP0077 NEW)
 set(ENABLE_DOCS OFF)
 set(ENABLE_EXAMPLES OFF)
