move `MeatSack` and `BoneBag` class to a seperate file

--- a/Source/AliveLibAE/CMakeLists.txt
+++ b/Source/AliveLibAE/CMakeLists.txt
@@ -301,10 +301,14 @@ SET(AliveLibAESrc
     BoomMachine.cpp
     Meat.hpp
     Meat.cpp
+    MeatSack.hpp
+    MeatSack.cpp
     Grenade.hpp
     Grenade.cpp
     Bone.hpp
     Bone.cpp
+    BoneBag.hpp
+    BoneBag.cpp
     Rock.hpp
     Rock.cpp
     RockSack.hpp
