create a new file for AO `MainMenuTransition`, kill some includes

--- a/Source/AliveLibAO/CMakeLists.txt
+++ b/Source/AliveLibAO/CMakeLists.txt
@@ -55,6 +55,8 @@ SET(AliveLibSrcAO
    LCDScreen.cpp
    MainMenu.hpp
    MainMenu.cpp
+   MainMenuTransition.hpp
+   MainMenuTransition.cpp
    Mine.hpp
    Mine.cpp
    Door.hpp
