--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -214,5 +214,6 @@ set(CPACK_RPM_EXCLUDE_FROM_AUTO_FILELIST_ADDITION
 )
 
 set(CPACK_DMG_DISABLE_APPLICATIONS_SYMLINK ON)
+set(CPACK_DMG_BACKGROUND_IMAGE ${CMAKE_CURRENT_SOURCE_DIR}/assets/relive.png)
 
 INCLUDE(CPack)
