--- a/Source/Tools/relive_api_unit_test/CMakeLists.txt
+++ b/Source/Tools/relive_api_unit_test/CMakeLists.txt
@@ -35,4 +35,8 @@ endif()
 
 export(TARGETS relive_api_unit_test FILE relive_api_unit_test.cmake)
 set_property(TARGET relive_api_unit_test PROPERTY FOLDER "ReliveAPI")
+
+# Only put in the windows zip
+if (WIN32)
 install(TARGETS relive_api_unit_test DESTINATION "${BINPATH}")
+endif()
