--- a/assets/CMakeLists.txt
+++ b/assets/CMakeLists.txt
@@ -1,4 +1,4 @@
-if(UNIX)
+if(UNIX AND NOT APPLE)
   SET(BINPATH "bin")
   install(PROGRAMS "${CMAKE_CURRENT_SOURCE_DIR}/relive-ao" DESTINATION "${BINPATH}")
   install(PROGRAMS "${CMAKE_CURRENT_SOURCE_DIR}/relive-ae" DESTINATION "${BINPATH}")
