--- a/Source/relive/CMakeLists.txt
+++ b/Source/relive/CMakeLists.txt
@@ -45,6 +45,6 @@ if (APPLE)
                    COMMAND ${CMAKE_INSTALL_NAME_TOOL} -change /usr/local/opt/sdl2/lib/libSDL2-2.0.0.dylib @executable_path/../Frameworks/libSDL2.dylib $<TARGET_FILE:relive>
                    COMMENT "Fixing up libSDL2-2.0.0.dylib rpath")
 
-    INSTALL(FILES "/usr/local/lib/libSDL2.dylib" DESTINATION "relive.app/Contents/Frameworks")
+    INSTALL(FILES "/usr/local/lib/libSDL2-2.0.0.dylib" DESTINATION "relive.app/Contents/Frameworks")
 
 endif()
